<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="welcome_page_title">Welcome to Dicoding Story!</string>
    <string name="welcome_page_message">Share your exciting and interesting experiences while learning with Dicoding!</string>
    <string name="signup_page_title">Complete Your Information to Sign Up</string>
    <string name="signup_input_email">Email</string>
    <string name="signup_input_password">Password</string>
    <string name="signup_success_message">An account with email %1$s and name %2$s has been successfully created. Please log in and start learning to code!</string>
    <string name="signup_title">Yay!</string>
    <string name="signup_btn_continue">Continue</string>
    <string name="login_page_title">Ready to Share Your Stories on Dicoding?</string>
    <string name="login_page_message">Please log in to continue.</string>
    <string name="login_success_title">Yay!</string>
    <string name="login_success_message">You have successfully logged in. Start sharing your exciting stories now!</string>
    <string name="login_btn_continue">Continue</string>
    <string name="login_error_message">Please check your email or password and try again.</string>
    <string name="main_page_btn_logout">Logout</string>
    <string name="story_preview_image">Story Photo Preview</string>
    <string name="story_add_button">Add Story</string>
    <string name="story_image_details">Image Details</string>
    <string name="story_upload_image">Upload Story Image</string>
    <string name="story_description">Story Description</string>
    <string name="story_image">Image</string>
    <string name="map_label">Map</string>
    <string name="map_activity_title">Map Activity</string>
    <string name="map_data_not_available">Data not available.</string>
    <string name="map_btn_retry">Retry</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="story_location_label">Story Location</string>
    <string name="map_add_current_location">Add Current Location</string>
    <string name="photo_signup">Sign Up Photo</string>
    <string name="photo_login">Login Photo</string>
    <string name="camera_label">Camera</string>
    <string name="gallery_label">Gallery</string>
    <string name="btn_submit">Submit</string>
    <string name="user_name">Name</string>
    <string name="detail_story_title">Story Details</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="no_data_available">No data available.</string>
    <string name="logout_failed">Logout failed.</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="logout_confirmation_message">You will be logged out of the application.</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="create_story">Create Story</string>
    <string name="image_file_not_found">Image file not found.</string>
    <string name="failed_to_read_image_uri">Failed to read image URI.</string>
    <string name="failed_to_capture_image">Failed to capture image from camera.</string>
    <string name="camera_permission_required">Camera permission is required to use the camera.</string>
    <string name="location_permission_required">Location permission is required to access your location.</string>
    <string name="failed_to_create_uri">Failed to create URI for photo.</string>
    <string name="enter_description">Please enter a description for the image first.</string>
    <string name="select_image_file">Please select an image file first.</string>
    <string name="location_not_found">Location not found.</string>
    <string name="failed_to_get_location">Failed to get location: %1$s</string>
    <string name="location_permission_not_granted">Location permission not granted.</string>
    <string name="failed_to_start_location_updates">Failed to start location updates: %1$s</string>
    <string name="location_permission_not_available">Location permission not available: %1$s</string>
    <string name="failed_to_get_new_location">Failed to get new location: %1$s</string>
    <string name="validation_password">Password must be at least 8 characters.</string>
    <string name="validation_email">Invalid email address.</string>
</resources>
