<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".view.main.CreateActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_create"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/create_story"
            android:titleTextColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/toolbar_create"
            app:layout_constraintBottom_toTopOf="@id/button_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/iv_image_preview"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/story_upload_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_place_holder"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintDimensionRatio="H,16:9"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cb_add_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_add_current_location"
                    android:contentDescription="@string/map_add_current_location"
                    app:layout_constraintTop_toBottomOf="@id/iv_image_preview"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/story_description"
                    app:layout_constraintTop_toBottomOf="@id/cb_add_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_add_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:gravity="start|top"
                        android:scrollbars="vertical"
                        android:overScrollMode="always"
                        android:scrollHorizontally="false"
                        android:minLines="8"
                        android:maxLines="5"
                        android:contentDescription="@string/story_description"
                        android:textColor="@color/colorNavy" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/button_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@id/til_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_open_camera"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/camera_label"
                        app:iconGravity="textStart"
                        app:iconPadding="8dp"
                        app:backgroundTint="@color/colorNavy"
                        android:textColor="@android:color/white"
                        android:contentDescription="@string/camera_label" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_open_gallery"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/gallery_label"
                        app:iconGravity="textStart"
                        app:iconPadding="8dp"
                        app:backgroundTint="@color/colorNavy"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="16dp"
                        android:contentDescription="@string/gallery_label" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/btn_submit"
            app:backgroundTint="@color/colorNavy"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/btn_submit" />

        <ProgressBar
            android:id="@+id/pb_create_story"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>